@@ -4,7 +4,6 @@
 	* mask.[ch], tests/test_mask.c:
 	  - Run length calculation has been slightly improved.
 	  - Reduce malloc calls.
-	[noframecache]
 	* qrspec.[ch], mqrspec.[ch]:
 	  - Frame caches have been eliminated. It improves both memory efficiency
 	    and performance... Wait, caches were completely meaningless? orz...
@@ -16,6 +15,8 @@
 	  - Removed cache clearing calls.
 	* qrencode.c:
 	  - FrameFiller now allocated in stack, not heap.
+	* rsecc.c:
+	  - Introduced mutex to avoid race condition.
 
 2014.09.08 Kentaro FUKUCHI <kentaro@fukuchi.org>
 	* qrenc.c:
